@startuml
skinparam backgroundColor white
skinparam shadowing false
skinparam defaultFontName Arial
skinparam defaultFontSize 16
skinparam dpi 160
skinparam monochrome true
skinparam classAttributeIconSize 0
hide circle
hide empty members
top to bottom direction
class UMLDiagram {
+id: str
+name: str
+uml_version: str
+add_class(c: UMLClass): UMLClass
+remove_class(class_id: str): bool
+to_dict(): dict
}
class UMLClass {
+id: str
+name: str
+is_abstract: bool
+is_interface: bool
+to_dict(): dict
}
class UMLAttribute {
+name: str
+type: str
+visibility: Visibility
+to_uml_string(): str
}
class UMLOperation {
+name: str
+return_type: str
+visibility: Visibility
+to_uml_string(): str
}
class UMLParameter {
+name: str
+type: str
+default_value: str [0..1]
}
UMLDiagram "1" --> "0..*" UMLClass : classes
UMLClass "1" --> "0..*" UMLAttribute : attributes
UMLClass "1" --> "0..*" UMLOperation : operations
UMLOperation "1" --> "0..*" UMLParameter : parameters
note bottom of UMLDiagram
Vista parcial fiel al código Python.
Las asociaciones muestran referencias;
no se presupone propiedad exclusiva.
end note
@enduml
